# agro-verx

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
agro_verx/config/: asgi.py  settings.py  urls.py  wsgi.py  yasg_schema.py
agro_verx/core/: apps.py  models.py  serializers.py
agro_verx/core/fixtures/: core_city.json  core_state.json
agro_verx/core/migrations/: 0001_initial.py
agro_verx/dashboard/: apps.py  dashboard.py  urls.py  views.py
agro_verx/producer/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
agro_verx/producer/fixtures/: producer_farm_plantation.json  producer_farms.json  producer_plantation_type.json  producer_producer.json
agro_verx/producer/migrations/: 0001_initial.py  0002_alter_producerfarmmodel_vegetation_area_hectares.py  0002_remove_producermodel_producer_document_number_and_more.py  0003_alter_producermodel_arable_area_hectares_and_more.py
agro_verx/tests/: conftest.py  factories.py
agro_verx/tests/producer/: test_producer.py
